generated/nixidy/prod/postgres/Deployment-postgres-ui-postgres-operator-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: postgres-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgres-operator-ui
  name: postgres-ui-postgres-operator-ui
  namespace: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: postgres-ui
      app.kubernetes.io/name: postgres-operator-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: postgres-ui
        app.kubernetes.io/name: postgres-operator-ui
    spec:
      affinity: {}
      containers:
        - env:
            - name: APP_URL
              value: http://localhost:8081
            - name: OPERATOR_API_URL
              value: http://postgres-operator:8080
            - name: OPERATOR_CLUSTER_NAME_LABEL
              value: cluster-name
            - name: RESOURCES_VISIBLE
              value: "True"
            - name: TARGET_NAMESPACE
              value: '*'
            - name: TEAMS
              value: |-
                [
                  "acid"
                ]
            - name: OPERATOR_UI_CONFIG
              value: |-
                [...]
          image: ghcr.io/zalando/postgres-operator-ui:v1.12.2
          imagePullPolicy: IfNotPresent
          name: service
          ports:
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
      nodeSelector: {}
      serviceAccountName: postgres-ui-postgres-operator-ui
      tolerations: []
