generated/nixidy/prod/postgres/Service-postgres-postgres-operator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgres-operator
  name: postgres-postgres-operator
  namespace: storage
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/name: postgres-operator
  type: ClusterIP
