generated/nixidy/prod/postgres/Service-postgres-ui-postgres-operator-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: postgres-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgres-operator-ui
  name: postgres-ui-postgres-operator-ui
  namespace: storage
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    app.kubernetes.io/instance: postgres-ui
    app.kubernetes.io/name: postgres-operator-ui
  type: ClusterIP
