generated/nixidy/prod/postgres/HTTPRoute-postgres-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: postgres-ui
  namespace: storage
spec:
  hostnames:
    - postgres.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: postgres-ui-postgres-operator-ui
          port: 80
